Bug 1432636 - Switch XMLPrettyPrint to use HTML <details> instead of click handlers for expandables. r=ntim,peterv
Also remove duplicate import from the XMLMonoPrint sheet (unnamed default sheets
stay applied when switching to alternates, only named are unapplied).

Additionally fix some regressions from bug 379683:
* top-level collapsed and uncollapsible elements weren't monospaced in monospace
  style.
* top-level uncollapsible elements weren't indented.
* there was an extra space between PIs and their expander control.

Based on prototype by bgrins.

MozReview-Commit-ID: 2Pikm41FMWY

UltraBlame original commit: 863272a3efcc01ec7cb5a3fa603cfa5a4549d2d5

--- a/dom/xml/resources/XMLPrettyPrint.css
+++ b/dom/xml/resources/XMLPrettyPrint.css
@@ -54,99 +54,113 @@ bottom
 1em
 ;
 }
+#
+tree
 .
-expander
+expandable
 -
-content
+children
 {
-padding
+margin
 -
-left
+inline
+-
+start
 :
 1em
 ;
 }
 .
-expander
+expandable
+-
+body
 {
-cursor
-:
-pointer
-;
--
-moz
--
-user
--
-select
-:
-none
-;
-text
--
-align
-:
-center
-;
-vertical
--
-align
-:
-top
-;
-width
-:
-1em
-;
 display
 :
 inline
 -
 block
 ;
-margin
--
-left
-:
--
-1em
-;
 }
-#
-top
->
 .
-expander
+expandable
 -
+body
+[
 open
-#
-top
->
-.
-expander
--
-closed
-{
-margin
--
-left
-:
-1em
-;
-}
-.
-expander
--
-closed
->
-.
-expander
--
-content
+]
 {
 display
 :
-none
+block
+;
+}
+.
+expandable
+-
+opening
+{
+list
+-
+style
+:
+'
++
+'
+outside
+;
+}
+[
+open
+]
+>
+.
+expandable
+-
+opening
+{
+list
+-
+style
+-
+type
+:
+'
+'
+;
+}
+.
+expandable
+-
+opening
+:
+:
+-
+moz
+-
+list
+-
+bullet
+{
+cursor
+:
+pointer
+;
+padding
+-
+inline
+-
+end
+:
+2px
+;
+color
+:
+initial
+;
+font
+:
+initial
 ;
 }
 .
